--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   geolocator_platform_interface: ^4.0.7
   geolocator: ^9.0.2
   flutter_native_timezone: ^2.0.0
-  # dependencies:
+  intl: ^0.18.1
+  ntp: ^2.0.0
   flutter_bloc: ^8.1.3
 
 dev_dependencies:
